<resources>
    <string name="app_name">ConsumerApp</string>
    <string name="name">Nama</string>
    <string name="name_user">Nama User</string>
    <string name="user_location">Location :</string>
    <string name="company">Company :</string>
    <string name="repository">Repository</string>
    <string name="_102">_102</string>
    <string name="followers">Followers</string>
    <string name="_56995">_56995</string>
    <string name="following">Following</string>
    <string name="_12">_12</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="repo">000</string>
    <string name="follow">000</string>
    <string name="title_home">Home</string>
    <string name="title_favourite">Favourite</string>
    <string name="title_setting">Settings</string>
    <string name="reminder_setting">Reminder</string>
    <string name="daily_reminder">Daily Reminder</string>
    <string name="username">Username</string>
    <string name="setting">Setting</string>
    <string name="daily_message">Ayo Kembali ke GITHUB</string>
</resources>